fix clippath

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -12,7 +12,7 @@ body::after {
   width: 100%;
   height: 100%;
   background: var(--blue);
-  clip-path: polygon(90% 0, 100% 0, 100% 100%, 45% 100%);
+  clip-path: polygon(90% 0, 100% 0, 100% 100%, 50% 100%);
   z-index: -1;
 }
 
